--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "guzzlehttp/guzzle": "^6.5",
-      "ext-json": "*"
+      "ext-json": "*",
+        "milypoint/urlshortelerclient": "^0.1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
