--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Thumbs.db
 
 # composer itself is not needed
 composer.phar
+composer.lock
 
 # Mac DS_Store Files
 .DS_Store
@@ -32,5 +33,5 @@ tests/_support/_generated
 #vagrant folder
 /.vagrant
 
+#db config
 config/db.php
-controllers/TestController.php
