--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=7.3",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "guzzlehttp/guzzle": "^6.5",
       "ext-json": "*",
-        "milypoint/urlshortelerclient": "^0.1.1"
+        "milypoint/urlshortelerclient": "^0.1.1",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
